<resources>
    <string name="app_name">braveTogether</string>
    <string name="title_activity_manage_march" translatable="false">Manage_march</string>
    <string name="video_explanation">Record three snippets to create your video</string>
    <string name="record_first_video">Record the first video. The video should be about 30 seconds, and you should answer the question</string>
    <string name="about_mizad_hagvura">About Mizad HaGvura</string>
    <string name="video_instruction">Video Instruction</string>
    <string name="singing_cord">Cordinating singing</string>
    <string name="march_manager">March Manager</string>
    <string name="song_lyrics">Song Lyrics</string>
    <string name="video_instruction_text">Recording a video is a way to pass on the bravery and
        courage that holocaust survivors showed during World War II. \n\n The video is built of
        three parts, each one about 30 seconds long. In each section you will be asked to answer
        the following questions: \n\n1. Tell us about a struggle you had during the holocaust.
        \n2. What helped you overcome that struggle? \n3. What do you want the future generations
        to remember? \n\nAfter recording each segment you have an option to view the recording and
        create a new one if you aren’t satisfied with what you filmed. Once you record all three
        pieces, they will be merged into one video that will be uploaded to the BraveTogether
        YouTube channel. In addition, they’ll be an option for you to share the video with your
        friends and family on FaceBook.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!--<string name="hello_blank_fragment">Hello blank fragment</string>-->
    <string name="instruction_next">Next</string>
    <string name="march_locations_button">March Locations</string>
    <string name="hatikva_label">Hatikva</string>
    <string name="one_human_tapestry_label">One Human Tapestry</string>
    <string name="next_song_button">Next Song</string>
    <string name="previous_song_button">Previous Song</string>
    <string name="JM_lyrics">Jerusalem Song Lyrics</string>
    <string name="instruction_lyrics">Click on a location below to access the song lyrics for the march at that location</string>
    <string name="eilat_lyrics">Eilat Song Lyrics</string>
    <string name="yad_mordichai_lyrics">Yad Mordichai Song Lyrics</string>
    <string name="kiryat_mutzkin_lyrics">Kiryat Mutzkin Song Lyrics</string>
    <string name="lochami_hagetaot_lyrics">Lochami HaGetaot Song Lyrics</string>
    <string name="Tel_Aviv_lyrics">Tel Aviv Song Lyrics</string>
    <!--<string name="hello_blank_fragment">hello_blank_fragment</string>-->
    <string name="sign_up">Sign up to a march</string>
    <string name="ride_to_march">Find a ride to the march</string>
    <string name="location_instructions">Brave Together Marches happen all around the country. Find the closest location to you.</string>
    <string name="signup_instruction">Planning on attending the march? Sign up now!</string>
    <string name="find_ride_instructions">Attending the march but not sure how to get there? Click here to join a group and find a ride. You can either be a driver (and pick up other participants along the way) or you can be a passenger and someone will pick you up</string>
    <string name="logo" translatable="false">logo</string>
    <string name="record_video">Record Video</string>
    <string name="donate">Donate</string>
    <string name="hello_blank_fragment" translatable="false">hello_blank_fragment</string>


    <string name="button_authorize" translatable="false">Authorize</string>
    <string name="button_record" translatable="false">הקלט סרטון</string>
    <string name="button_pick" translatable="false">בחר מהגלריה</string>
    <string name="button_upload" translatable="false">UPLOAD TO YTDL</string>
    <string name="button_submit" translatable="false">פרסם בערוץ מצעד הגבורה</string>
    <string name="menu_settings" translatable="false">Settings</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_activity_display_message" translatable="false">My Message</string>
    <string name="google_play_not_available" translatable="false">Google Play Services not available</string>
    <string name="youtube_upload_started" translatable="false">YouTube Direct Lite upload started</string>
    <string name="connection_to_google_play_failed" translatable="false">Connection to Play Services failed.</string>
    <string name="youtube_upload" translatable="false">YouTube upload</string>
    <string name="not_signed_in" translatable="false">לא מחובר</string>
    <string name="dev_setup_explanation" translatable="false">If you\'re seeing this screen, congratulations! You\'ve set up the dependencies for YouTube Direct Lite correctly. You just need to set up the following for the app to work correctly:</string>
    <string name="error" translatable="false">Error</string>
    <string name="error_format" translatable="false">[Error] %s</string>
    <string name="refresh" translatable="false">רענן</string>
    <string name="accounts">חשבונות</string>
    <string name="initiation_started" translatable="false">Initiation Started</string>
    <string name="initiation_completed" translatable="false">Initiation Completed</string>
    <string name="upload_in_progress" translatable="false">Direct Lite upload in progress</string>
    <string name="yt_upload_completed" translatable="false">YouTube Upload Completed</string>
    <string name="upload_completed" translatable="false">Upload completed</string>
    <string name="upload_not_started" translatable="false">Upload Not Started!</string>
    <string name="yt_upload_failed" translatable="false">YouTube Upload Failed</string>
    <string name="reauth_required" translatable="false">Re-login required</string>
    <string name="please_try_again" translatable="false">Please try again</string>
    <string name="cant_access_play" translatable="false">Can\'t access to Google Play services</string>
    <string name="title_activity_play" translatable="false">Click below to submit</string>
    <string name="action_settings">Settings</string>
    <string name="send" translatable="false">Click send</string>
    <string name="title_activity_review" translatable="false">Click below to upload</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="pick_one_of_your_videos_to_submit" translatable="false">בחר סרטון מערוץ היוטיוב שלך</string>
    <string name="no_videos_to_show_here_" translatable="false">אין סרטונים בחשבון היוטיוב.</string>
    <string name="avatar" translatable="false">avatar</string>
    <string name="pick_or_record_a_video_to_upload" translatable="false">בחר סרטון מהגלריה או הקלט אחד חדש</string>
    <string name="see_the_newly_uploaded_video" translatable="false">See the newly uploaded video</string>
    <string name="watch_your_video" translatable="false">צפה בסרטון שלך</string>
    <string name="video_submitted_to_ytdl" translatable="false">הסרטון פורסם בהצלחה</string>
    <string name="playing_uploaded_video" translatable="false">Playing uploaded video</string>
    <string name="playing_the_video_in_upload_progress" translatable="false">Playing the video in upload progress</string>
    <string name="lyrics_instruction">Click here to view the lyrics of the songs we will sing in the march.</string>
    <string name="singingCordInstruction">Arrived at the march?  Click here to join the live YouTube channel we use to coordinate the singing, so everyone will be singing the songs in union.</string>

</resources>
