<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"

    tools:context="com.testing.braveTogether.MainActivity">


    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="398dp"
        android:layout_height="179dp"
        android:layout_weight="1.5"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logo_mizad_hagvura"
        android:contentDescription="@string/logo" />

    <Button
        android:id="@+id/about_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:onClick="openAboutPageModule"
        android:text="@string/about_mizad_hagvura" />

    <Button
        android:id="@+id/manage_march_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:onClick="openManageMarchModule"
        android:text="@string/march_manager" />

    <Button
        android:id="@+id/record_video_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:onClick="openRecordVideoModule"
        android:text="@string/record_video" />

    <Button
        android:id="@+id/donate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:onClick="openDonatePage"
        android:text="@string/donate" />


</LinearLayout>