<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Manage_march">

    <Button
        android:id="@+id/singing_cord_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singing_cord" />

    <Button
        android:id="@+id/lyrics_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/song_lyrics"
        android:onClick="openLyricsActivity"
       />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/march_locations_button"
        />

</LinearLayout>